# art_modern

./: .clang-tidy  .cmake-format.py  .gitignore  .lintr  .markdownlint.json  CMakeLists.txt  Contributing.md  Copying.md  License.md  Makefile  News.md  Readme.Devel.md  Readme.md  TODO.md  art_modern.yml  fmt.sh  pixi.toml  pre-release-check.sh  profile.sh  scc.sh  test_sam.py  test_small.sh
.github/ISSUE_TEMPLATE/: add_model.md  bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: simple.md
art/: ArtCmdOpts.cc  ArtCmdOpts.hh  ArtConstants.hh  ArtContig.cc  ArtContig.hh  ArtJobExecutor.cc  ArtJobExecutor.hh  ArtJobPool.cc  ArtJobPool.hh  ArtParams.cc  ArtParams.hh  ArtRead.cc  ArtRead.hh  ArtSamHeader.cc  ArtSamHeader.hh  ArtVersion.cc  ArtVersion.hh  Empdist.cc  Empdist.hh  Readme.md  SamRead.cc  SamRead.hh  main.cc  main_fn.cc  main_fn.hh  random_generator.cc  random_generator.hh
benchmarks/: fasta_reader.cc
bioconda/: .gitignore  .lint-bioconda-utils.sh  .lint-conda-build.sh  .lint.sh  config.yml  lint-bioconda-utils.sh  lint-conda-build.sh
chroot/: .gitignore  Makefile  Readme.md  debian-oldoldstable-etc-apt-sources.list  ubuntu-1804-etc-apt-source.list  update-chroot.sh
cmake_includes/: absl.cmake  boost.cmake  ccache.cmake  concurrentqueue.cmake  htslib.cmake  launch-c.in  launch-cxx.in  libfmt.cmake  malloc.cmake  mpi.cmake  openmp.cmake  parallel.cmake  protobuf.cmake  qualgen.cmake  rng.cmake
data/: Readme.md
data/Illumina_profiles/: BgiSeq500L150R1.txt  BgiSeq500L150R2.txt  DNBSG50L150R2.txt  DNBSeqG400L150R1.txt  DNBSeqG400L150R2.txt  DNBSeqG400L200R1.txt  DNBSeqG400L200R2.txt  DNBSeqG400L400R1.txt  DNBSeqG50L150R1.txt  DNBSeqG99L300R1.txt  DNBSeqG99L300R2.txt  DNBSeqT10X4L100R1.txt  DNBSeqT10X4L100R2.txt  DNBSeqT1PlusL150R1.txt  DNBSeqT1PlusL150R2.txt  DNBSeqT7L150R1.txt  DNBSeqT7L150R2.txt  GA2XL100R1.txt  GA2XL100R2.txt  GA2XL150R1.txt  GA2XL150R2.txt  HiSeq1500L150R1.txt  HiSeq1500L150R2.txt  HiSeq1500L250R1.txt  HiSeq1500L250R2.txt  HiSeq3kL150R1.txt  HiSeq3kL150R2.txt  HiSeq4kL150R1.txt  HiSeq4kL150R2.txt  Makefile  MiSeqv3L300R1.txt  MiSeqv3L300R2.txt  NextSeq500L150R1.txt  NextSeq500L150R2.txt  NextSeq550L150R1.txt  NextSeq550L150R2.txt  PacbOnsoL150R1.txt  PacbOnsoL150R2.txt
data/raw_data/: .gitignore  Makefile  err.fa
debian/: art-modern-mpi.changelog  art-modern-mpi.manpages  art-modern-mpi.rules  art-modern-openmpi.docs  art-modern-openmpi.install  art-modern.changelog  art-modern.docs  art-modern.install  art-modern.manpages  art-modern.rules  art_modern-mpi.1.md  art_modern.1.md  art_profile_builder-mpi.1.md  art_profile_builder.1.md  changelog  control  copyright  docs  manpages  rules  shared.mk  watch
debian/source/: lintian-overrides
debian/upstream/: metadata
docs/: .gitignore  Authors.md  BuildLogs.md  CODE_OF_CONDUCT.md  Contributing.md  Copying.md  CopyingAppendicies.md  Design.md  FAQ.md  Guide.md  Install.md  News.md  Security.md  TODO.md  Usage-amc.md  Usage-apb.md  Usage-art_modern.md  Usage.md  project.dic
docs/original_art_docs/: www.niehs.nih.gov.md
docs/sphinx.d/: .gitignore  Makefile  conf.py  convert_readme.py  index.md  latex_preamble.tex  versions.md.jinja2
env/: art_modern.yml  art_modern_doc.yml  art_modern_intelrt.yml  bioconda.yml  intel-compilers.yml
explore/: Readme.md
explore/analyze_bgiseq/: Readme.md  run.sh
explore/analyze_gcb/: Readme.md  dl.sh
explore/bench_mpi_io/: .gitignore  CMakeLists.txt  bench_io_funcs.hh  bench_nompi.cc  bench_one_io_per_job.cc  build_jiashan.sh  mpi_work_quit.cc  slurm_jiashan.sh
explore/bench_rand/: .gitignore  CMakeLists.txt  Readme.md  bench_bits.cc  bench_common_task.cc  bench_dists.cc  bench_testu01.cc  bench_uniform_real.cc  class_utils.hh  gsl_rng_wrapper.hh  jump.cpp  rprobs.hh  test_rng_loyalty.cc  testu01_main.c  testu01_main.cc  vmt19937_wrapper.hh
explore/bench_rand/include/: arch_utils.hh  bench_rand_conf.hh.in  benchmark_utils.hh  class_utils.hh  rprobs.hh  vmt19937_wrapper.hh  xoroshiro_wrapper.hh
explore/benchmark_other_simulators/: .gitignore  Makefile  Readme.md  build-others.sh  build-prev.sh  build-update.sh  build.sh  cmp_profile.py  fit-hs25-pe150-pirs.sh  get_profile.py  plot.R  plot_corr.R  plot_depth.R  plot_time_memory.R  profile-dwgsim.sh  run-depth.sh  run-fastqc.sh  run-fit.sh  run-time-memory-am-impl.sh  run-time-memory.sh  run.sh
explore/more_models/: .gitignore  Readme.md  fetch.sh  fetch_rlen.py  fetch_samples.py  jmp_query.py  plot.py  plot_model_counts.py  plot_rlen.py
explore/packing_status/: 0-schema-dump.py  1-reformat-data.py  (+2 more)
lib/: CExceptionsProxy.cc  CExceptionsProxy.hh  DumbFileStream.cc  DumbFileStream.hh  ExceptionUtils.cc  ExceptionUtils.hh  FileStreamInterface.hh  MapUtils.hh  NotImplementedException.cc  NotImplementedException.hh  PairwiseAlignment.cc  PairwiseAlignment.hh  SimulationJob.cc  SimulationJob.hh  ThreadSafeFileStream.cc  ThreadSafeFileStream.hh  art_modern_config.h.in  art_modern_constants.hh  fasta_parser.cc  fasta_parser.hh  global_variables.hh  misc.cc  misc.hh  mpi_utils.cc  mpi_utils.hh  seq_utils.cc  seq_utils.hh
packing/: .gitignore  Makefile  Readme.md  pack-alpine-exe.sh  pack-alpine-tgz.sh  pack-deb.sh
paper/: .gitignore  .markdownlint.json  paper.bib  paper.md
raw_data/: .gitignore  Makefile  small_test.fa
sh.d/: bench-art_profile_builder-se.sh  bench_profile_gen.sh  buildoncluster.sh  deb.sh  enable-profilers.sh  fmt.sh  format-boost-imports.py  gen_builtin_profiles.py  gen_short_ref.py  libwindows.sh  list-boost-imports.sh  make2help.py  plot_out_speed.R  scc.sh  test-am-large-contigs.sh  test-am-many-contigs.sh  test-art_profile_builder-pe.sh  test-art_profile_builder-se.sh  test-build.py  test-build.sh  test-small.sh  test_small.sh  test_until_failure.sh  touch-all.sh
test/: .gitignore  fasta_parser.cc  test.fasta  test_adaptor.h.in  test_fasta_parser.cc  test_move_copy.cc  test_range.cc  test_seq_utils.cc
test_small.sh.d/: base.sh  gen_cov.py  out_fmts.sh  tmpl_constcov.sh  tmpl_pbsim3.sh  tmpl_scov.sh  trans_constcov.sh  trans_pbsim3.sh  wgs.sh
(+611 files in other folders)
